# ProTrace

./: .gitignore  README.md  SECURITY.md  backup_old_docs  create_test_images.py  demo_workflow.py  push_to_github.ps1  results.json  single_result.json  tree.json
ProPy/: README.md  api_testnet.py  cli_testnet.py  pyproject.toml  requirements.txt  requirements_legacy.txt  setup.py
ProPy/examples/: demo_workflow.py
ProPy/examples/demos/: edition_demo.py  mvp_demo.py  mvp_workflow.py  registration_demo.py
ProPy/modules/dna_extraction/: perceptual_hash.py
ProPy/modules/protrace_legacy/: __init__.py  core.py  cross_chain_minting.py  edition_core.py  eip712.py  image_dna.py  ipfs.py  logging.py  merkle.py  relayer_service.py  vector_db.py
ProPy/modules/protrace_legacy/benchmarks/: __init__.py  dna_benchmark.py  merkle_benchmark.py  merkle_benchmark_simple.py
ProPy/modules/protrace_legacy/cli/: __init__.py  main.py
ProPy/modules/protrace_legacy/registration/: __init__.py  batch_register.py  register_image.py
ProPy/modules/protrace_legacy/tools/: __init__.py  debug_hashes.py  debug_registry.py  util_create_duplicates.py  util_find_filenames.py  util_find_matches.py  util_get_hashes.py  verification_check_images.py  verification_check_registry.py  verification_folder.py  verification_matches.py
ProPy/modules/protrace_rust_bindings/: ARCHITECTURE.md  BUILD_GUIDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md
ProPy/modules/protrace_rust_bindings/crates/blockchain/: Cargo.toml
ProPy/modules/protrace_rust_bindings/crates/blockchain/src/: lib.rs  types.rs
ProPy/modules/protrace_rust_bindings/crates/cli/: Cargo.toml
ProPy/modules/protrace_rust_bindings/crates/cli/src/: main.rs
ProPy/modules/protrace_rust_bindings/crates/cli/src/commands/: blockchain.rs  dna.rs  merkle.rs  mod.rs  test.rs  wallet.rs
ProPy/modules/protrace_rust_bindings/crates/image-dna/: Cargo.toml
ProPy/modules/protrace_rust_bindings/crates/image-dna/src/: lib.rs
ProPy/modules/protrace_rust_bindings/crates/merkle-tree/: Cargo.toml
ProPy/modules/protrace_rust_bindings/crates/merkle-tree/src/: lib.rs
ProPy/modules/protrace_rust_bindings/crates/wallet/: Cargo.toml
ProPy/modules/protrace_rust_bindings/crates/wallet/src/: lib.rs
ProPy/modules/protrace_rust_bindings/examples/: basic_usage.rs
ProPy/modules/protrace_rust_bindings/scripts/: setup-devnet.ps1  setup-devnet.sh
ProPy/modules/protrace_rust_bindings/tests/: integration_test.rs
ProPy/scripts/: cleanup.py
ProPy/scripts/legacy/: check_duplicates.py  debug_hashes.py  perf_monitor.py  v_ipfs_manager.py  validate_system.py
ProPy/scripts/legacy/deployment/: deploy.sh
ProPy/scripts/legacy/utilities/: analyze_structure.py  analyze_test_images.py  cleanup_duplicates.py  create_duplicates_folder.py  reorganize_project.py  validate_ecosystem.py
ProPy/sdk/python/: api_server.py  api_server_complete.py  api_testing_endpoints.py  test_server_complete.py  testsprite_mock_server.py
ProPy/sdk/python/backend/: api.py  config.py  testsprite_runner.py
ProRust/: Anchor.toml  Cargo.toml  DEPLOY_TO_DEVNET.md  README.md  SECURITY_TXT.md  deploy_devnet.ps1  deploy_devnet.sh  test_rust_modules.sh  verify_deployment.sh
ProRust/crates/client/: Cargo.toml
ProRust/crates/client/src/: main.rs
ProRust/crates/dna-extraction/: Cargo.toml  README.md
ProRust/crates/dna-extraction/benches/: dna_benchmark.rs
ProRust/crates/dna-extraction/examples/: basic.rs
ProRust/crates/dna-extraction/src/: dhash.rs  grid.rs  lib.rs  utils.rs
ProRust/crates/merkle-tree/: Cargo.toml  README.md
ProRust/crates/merkle-tree/benches/: merkle_benchmark.rs
ProRust/crates/merkle-tree/examples/: basic.rs
ProRust/crates/merkle-tree/src/: lib.rs
ProRust/crates/program/: Cargo.toml
ProRust/crates/program/src/: lib.rs
ProRust/programs/protrace/: Cargo.toml
ProRust/programs/protrace/src/: lib.rs
docs/: COMPLETE_STATUS.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  DEPLOY_WSL.md  ECOSYSTEM_DEBUGGED_COMPLETE.md  PARITY_COMPLETE.md  RUST_PYTHON_PARITY.md  SECURITY_TXT_ADDED.md  TESTNET_DEPLOYMENT.md  TESTNET_READY.md  TEST_RESULTS_SUMMARY.md  VERIFICATION_COMPLETE.md
shared/docker/: .dockerignore  docker-compose.yml
shared/docs/: API_ENDPOINTS.md  DEPLOYMENT_GUIDE.md  DUAL_ECOSYSTEM_SUMMARY.md  ECOSYSTEM_RESTRUCTURE.md  IMPLEMENTATION_GUIDE.md  PRODUCTION_README.md
tests/: TEST_FINAL.py  cleanup_tests.py  test_all_modules.py  test_core_modules.py  test_modules_fixed.py  test_python_rust_parity.py
testsprite_tests/: standard_prd.json  testsprite_backend_test_plan.json
testsprite_tests/tmp/: code_summary.json  config.json
testsprite_tests/tmp/prd_files/: README.md
