[workspace]
members = [
    "crates/image-dna",
    "crates/merkle-tree",
    "crates/blockchain",
    "crates/wallet",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ProTrace Team"]
license = "MIT"

[workspace.dependencies]
# Image processing
image = "0.24"
imageproc = "0.23"

# Cryptography
blake3 = "1.5"
sha2 = "0.10"
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Blockchain - Solana
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
anchor-lang = "0.29"
anchor-client = "0.29"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hex = "0.4"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
