[package]
name = "merkle_anchor_client"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipfs-api = "0.7.0"
anyhow = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
hex = "0.4"
borsh = "0.10.3"
solana-client = "1.16.22"
solana-sdk = "1.16.22"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
