[package]
name = "protrace-dna"
version = "2.0.0"
edition = "2021"
authors = ["ProTrace Team"]
description = "High-performance 256-bit perceptual DNA fingerprinting for ProTrace"
license = "MIT"

[lib]
name = "protrace_dna"
path = "src/lib.rs"

[[bin]]
name = "dna-extract"
path = "src/bin/extract.rs"

[dependencies]
# Image processing
image = "0.24"
imageproc = "0.23"

# Math and numerics
ndarray = "0.15"

# Hashing
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async support (optional)
tokio = { version = "1.0", optional = true, features = ["full"] }
rayon = { version = "1.8", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI (for binary)
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
parallel = ["rayon"]
async = ["tokio"]
cli = ["clap"]

[[bench]]
name = "dna_benchmark"
harness = false
