[package]
name = "protrace-merkle"
version = "1.0.0"
edition = "2021"
authors = ["ProTRACE Team"]
description = "BLAKE3-based Merkle tree for ProTRACE DNA registration"
license = "MIT"

[dependencies]
blake3 = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "merkle_benchmark"
harness = false

[features]
default = []
parallel = []
