[package]
name = "protrace-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "protrace"
path = "src/main.rs"

[dependencies]
protrace-image-dna = { path = "../image-dna" }
protrace-merkle-tree = { path = "../merkle-tree" }
protrace-blockchain = { path = "../blockchain" }
protrace-wallet = { path = "../wallet" }

solana-sdk.workspace = true
solana-client.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
bs58.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true

clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"
