[package]
name = "protrace-image-dna"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
imageproc.workspace = true
blake3.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
