[package]
name = "protrace-merkle-tree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
chrono.workspace = true
