[package]
name = "protrace-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
solana-sdk.workspace = true
solana-client.workspace = true
bs58.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
